<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/includeTitleLayout"
        layout="@layout/activity_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_alignParentTop="true" />


    <RelativeLayout style="@style/relative_check_style">

        <TextView
            android:id="@+id/tv_apply_start_time"
            style="@style/check_plan_info"
            android:text="@string/apply_start_time" />


        <EditText
            android:id="@+id/edt_input_start_time"
            style="@style/transfer_combine_info_edtcontent"
            android:focusable="false"
            android:hint="@string/input_date" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            android:id="@+id/tv_apply_end_time"
            style="@style/check_plan_info"
            android:text="@string/apply_end_time" />


        <EditText
            android:id="@+id/edt_input_end_time"
            style="@style/transfer_combine_info_edtcontent"
            android:focusable="false"
            android:hint="@string/input_date" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            style="@style/check_plan_info"
            android:text="@string/material_code" />

        <EditText
            android:id="@+id/edt_material_code"
            style="@style/transfer_combine_info_edtcontent"
            android:hint="@string/hint_input_code" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            style="@style/check_plan_info"
            android:text="@string/qis_code" />

        <EditText
            android:id="@+id/edt_qis_code"
            style="@style/transfer_combine_info_edtcontent"
            android:hint="@string/hint_input_code" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style"
        android:id="@+id/rl_execute_status">

        <TextView
            style="@style/check_plan_info"
            android:text="@string/exe_status" />

        <TextView
            android:id="@+id/tv_execute_status"
            style="@style/transfer_combine_info_tvcontent"
            android:drawablePadding="@dimen/dimen_10"
            android:drawableRight="@drawable/ic_more"
            android:text="@string/all" />

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_12" />

    <Button
        android:id="@+id/btn_sure"
        style="@style/btn_sure"
        android:text="@string/sure" />
</LinearLayout>
