<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/includeTitleLayout"
        layout="@layout/activity_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_alignParentTop="true" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            android:id="@+id/tv_start_time"
            style="@style/check_plan_info"
            android:text="@string/start_time" />


        <EditText
            android:id="@+id/edt_select_start_time"
            style="@style/transfer_combine_info_edtcontent"
            android:focusable="false"
            android:hint="@string/input_date" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            android:id="@+id/tv_apply_end_time"
            style="@style/check_plan_info"
            android:text="@string/end_time" />


        <EditText
            android:id="@+id/edt_select_end_time"
            style="@style/transfer_combine_info_edtcontent"
            android:focusable="false"
            android:hint="@string/input_date" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <RelativeLayout style="@style/relative_check_style">

        <TextView
            style="@style/check_plan_info"
            android:text="@string/check_type" />

        <TextView
            android:id="@+id/tv_select_check_type"
            style="@style/transfer_combine_info_tvcontent"
            android:drawableRight="@drawable/ic_more"
            android:drawablePadding="@dimen/dimen_5"
            android:text="@string/check_plan" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stock" />

    <Button
        android:id="@+id/btn_sure"
        style="@style/btn_sure"
        android:text="@string/sure" />
</LinearLayout>
